[package]
name = "roussillon-memory"
description = "Memory utility for the roussillon language"
authors = ["Sébastien GELDREICH <trehinos@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["memory", "reference", "heap", "stack", "region"]
categories = ["data-structures", "memory-management"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["heap", "stack"]
heap = []
stack = []

[dependencies]
roussillon-type-system = "*"